# OOP_Labs

l3/: CMakeLists.txt
lw1/: CMakeLists.txt  a.out  func.cpp  func.h  func.hpp  main.cpp  test.cpp
